--- a/index.html
+++ b/index.html
@@ -202,6 +202,14 @@
                 <span class="value" id="torrent-filter-regex"></span>
             </div>
             <div class="env-var">
+                <label>MAX_MOVIE_SIZE:</label>
+                <span class="value" id="max-movie-size"></span>
+            </div>
+            <div class="env-var">
+                <label>MAX_EPISODE_SIZE:</label>
+                <span class="value" id="max-episode-size"></span>
+            </div>
+            <div class="env-var">
                 <label>REFRESH_INTERVAL_MINUTES:</label>
                 <span class="value" id="refresh-interval-minutes"></span>
             </div>
@@ -227,6 +235,10 @@
             document.getElementById('headless-mode').textContent = data.HEADLESS_MODE;
             document.getElementById('enable-automatic-background-task').textContent = data.ENABLE_AUTOMATIC_BACKGROUND_TASK;
             document.getElementById('torrent-filter-regex').textContent = data.TORRENT_FILTER_REGEX;
+            // Max Movie Size
+            document.getElementById('max-movie-size').textContent = data.MAX_MOVIE_SIZE;
+            // Max Episode Size
+            document.getElementById('max-episode-size').textContent = data.MAX_EPISODE_SIZE;
             document.getElementById('refresh-interval-minutes').textContent = data.REFRESH_INTERVAL_MINUTES;
             // URL check
             document.getElementById('overseerr-base').textContent = data.OVERSEERR_BASE;
